
#include "common.h"
#include "rational.h"
#include "version.h"
#include "macros.h"
#include "mathematics.h"
#include "log.h"
#include "pixfmt.h"

srcs += files ([
    # './hwcontext_drm/DRMDeviceContext.vapi',
    # './hwcontext_drm/DRMPlaneDescriptor.vapi',
    # './hwcontext_drm/DRMLayerDescriptor.vapi',
    # './hwcontext_drm/DRMFrameDescriptor.vapi',
    # './hwcontext_drm/DRMObjectDescriptor.vapi',
    # './tree/TreeNode.vapi',
    # './sha512/SHA512Context.vapi',
    # './hmac/HMACType.vapi',
    # './hmac/HMACContext.vapi',
    # './motion_vector/MotionVector.vapi',
    # './hwcontext_mediacodec/MediaCodecDeviceContext.vapi',
    # './md5/MD5Context.vapi',
    # './hwcontext_cuda/CUDADeviceContext.vapi',
    # './rc4/RC4Context.vapi',
    # './stereo3d/Stereo3DFlags.vapi',
    # './stereo3d/Stereo3DType.vapi',
    # './stereo3d/Stereo3DView.vapi',
    # './stereo3d/Stereo3D.vapi',
    # './timecode/TimeCodeFlags.vapi',
    # './timecode/TimeCode.vapi',
    # './des/DESContext.vapi',
    # './hwcontext/HardwareFrameConstraints.vapi',
    # './hwcontext/HardwareDeviceContext.vapi',
    # './hwcontext/HardwareFrameTransferDirection.vapi',
    # './hwcontext/HardwareFrameContext.vapi',
    # './hwcontext/HardwareFrameMappingFlags.vapi',
    # './hwcontext/hwcontext.vapi',
    # './hwcontext/HardwareDeviceType.vapi',
    # './imgutils/imgutils.vapi',
    # './blowfish/BlowfishContext.vapi',
    # './file/file.vapi',
    # './hash/HashContext.vapi',
    # './cpu/CPUCapabilityFlags.vapi',
    # './avutil/MediaType.vapi',
    # './avutil/PictureType.vapi',
    # './avutil/abvutil.vapi',
    # './avstring/StringEscapeFlags.vapi',
    # './avstring/String.vapi',
    # './avstring/StringEscapeMode.vapi',
    # './avstring/Utf8Flags.vapi',
    # './pixdesc/PixelFormatFlags.vapi',
    # './pixdesc/PixelLossFlags.vapi',
    # './pixdesc/ComponentDescriptor.vapi',
    # './pixdesc/PixelFormatDescriptor.vapi',
    # './crc/CRCIdentifier.vapi',
    # './crc/CRCContext.vapi',
    # './base64/Base64.vapi',
    # './mastering_display_metadata/ContentLightMetadata.vapi',
    # './mastering_display_metadata/MasteringDisplayMetadata.vapi',
    # './mathematics/Rounding.vapi',
    # './frame/RegionOfInterest.vapi',
    # './frame/FrameFlags.vapi',
    # './frame/FrameSideData.vapi',
    # './frame/ActiveFormatDescription.vapi',
    # './frame/FrameSideDataType.vapi',
    # './frame/Frame.vapi',
    # './frame/FrameCropFlags.vapi',
    # './frame/DecodeErrorFlags.vapi',
    # './adler32/Adler32.vapi',
    # './bprint/BPrintBuffer.vapi',
    # './bprint/BPrintSize.vapi',
    # './pixfmt/ColorTransferCharacteristic.vapi',
    # './pixfmt/ColorPrimaries.vapi',
    # './pixfmt/PixelFormat.vapi',
    # './pixfmt/ColorSpace.vapi',
    # './pixfmt/ChromaLocation.vapi',
    # './pixfmt/ColorRange.vapi',
    # './tx/TransformType.vapi',
    # './tx/ComplexFloat.vapi',
    # './tx/TransformContext.vapi',
    # './time/time.vapi',
    # './spherical/SphericalProjection.vapi',
    # './spherical/SphericalMapping.vapi',
    # './hwcontext_videotoolbox/hwcontext_videotoolbox.vapi',
    # './attributes/attributes.vapi',
    # './tea/TEAContext.vapi',
    # './hwcontext_qsv/QSVFrameContext.vapi',
    # './hwcontext_qsv/QSVDeviceContext.vapi',
    # './random_seed/random_seed.vapi',
    # './common/common.vapi',
    # './audio_fifo/AudioFifo.vapi',
    # './xtea/XTEAContext.vapi',
    # './hwcontext_d3d11va/D3D11VAFrameContext.vapi',
    # './hwcontext_d3d11va/D3D11FrameDescriptor.vapi',
    # './hwcontext_d3d11va/D3D11VADeviceContext.vapi',
    # './samplefmt/SampleFormat.vapi',
    # './hwcontext_vdpau/VDPAUDeviceContext.vapi',
    # './version/version.vapi',
    # './lfg/LFGContext.vapi',
    # './rational/Rational.vapi',
    # './parseutils/parseutils.vapi',
    # './sha/SHAContext.vapi',
    # './camellia/CAMELLIAContext.vapi',
    # './fifo/FifoBuffer.vapi',
    # './hwcontext_dxva2/DXVA2DeviceContext.vapi',
    # './hwcontext_dxva2/DXVA2FrameContext.vapi',
    # './opt/OptionRangeList.vapi',
    # './opt/Option.vapi',
    # './opt/OptionFlags.vapi',
    # './opt/OptionRange.vapi',
    # './opt/OptionSearchFlags.vapi',
    # './opt/OptionSerializationFlags.vapi',
    # './opt/OptionType.vapi',
    # './log/LogLevel.vapi',
    # './log/log.vapi',
    # './log/Class.vapi',
    # './log/ClassCategory.vapi',
    # './log/LogFlags.vapi',
    # './cast5/CAST5Context.vapi',
    # './bswap/bswap.vapi',
    # './display/display.vapi',
    # './replaygain/ReplayGain.vapi',
    # './eval/Expression.vapi',
    # './hdr_dynamic_metadata/HDRPlusColorTransformParameters.vapi',
    # './hdr_dynamic_metadata/HDRPlusOverlapProcessOption.vapi',
    # './hdr_dynamic_metadata/HDRPlusPercentile.vapi',
    # './hdr_dynamic_metadata/HDRPlusDynamicMetadata.vapi',
    # './pixelutils/pixelutils.vapi',
    # './timestamp/timestamp.vapi',
    # './twofish/TWOFISHContext.vapi',
    # './error/ErrorCode.vapi',
    # './dict/DictionaryEntry.vapi',
    # './dict/DictionaryFlags.vapi',
    # './dict/Dictionary.vapi',
    # './encryption_info/EncryptionInitializationInfo.vapi',
    # './encryption_info/SubsampleEncryptionInfo.vapi',
    # './encryption_info/EncryptionInfo.vapi',
    # './aes_ctr/AESCTRContext.vapi',
    # './lzo/LZOErrorFlags.vapi',
    # './lzo/LZOContext.vapi',
    # './channel_layout/ChannelLayoutFlags.vapi',
    # './channel_layout/MatrixEncoding.vapi',
    # './ripemd/RIPEMDContext.vapi',
    # './mem/mem.vapi',
    # './avassert/avassert.vapi',
    # './downmix_info/DownMixType.vapi',
    # './downmix_info/DownMixInfo.vapi',
    # './aes/AESContext.vapi',
    # './intfloat/intfloat.vapi',
    # './hwcontext_vaapi/VAAPIDeviceContext.vapi',
    # './hwcontext_vaapi/VAAPIHWConfig.vapi',
    # './hwcontext_vaapi/VAAPIDriverQuirk.vapi',
    # './hwcontext_vaapi/VAAPIFrameContext.vapi',
    # './murmur3/MurMur3Context.vapi',
    # './buffer/BufferPool.vapi',
    # './buffer/BufferFlags.vapi',
    # './buffer/BufferRef.vapi',
    # './buffer/Buffer.vapi',
    # './threadmessage/ThreadMessageFlags.vapi',
    # './threadmessage/ThreadMessageQueue.vapi'
])