srcs += files ([
    './ResampleContext.vapi',
    './SoftwareResampleFilterType.vapi',
    './SoftwareResampleDitherType.vapi',
    './DitherContext.vapi',
    './SoftwareResampleEngine.vapi',
    './AudioConvert.vapi',
    './AudioData.vapi',
    './Resampler.vapi',
    './SoftwareContext.vapi',
    './SoftwareResampleFlags.vapi'
])