srcs += files ([
    './rgb2rgb.vapi',
    './SoftwareScaleSlice.vapi',
    './SoftwareScaleColorSpace.vapi',
    './SoftwareScaleFilter.vapi',
    './SoftwareScaleSlicePlane.vapi',
    './SoftwareScaleFilterDescriptor.vapi',
    './SoftwareScaleContext.vapi',
    './SoftwareScaleVector.vapi',
    './SoftwareScaleFlags.vapi',
    './SoftwareScaleAlphaBlendType.vapi',
    './SoftwareScaleDitherType.vapi',
    './swscale_internal.vapi'
])