
srcs += files([
    './SubtitleRect.vapi',
    './CodecParserContext.vapi',
    './SubtitleFlags.vapi',
    './CodecFlags1.vapi',
    './CodecConfig.vapi',
    './HardwareAccelerationCodecCapabilityFlags.vapi',
    './CodecContext.vapi',
    './HardwareAcceleration.vapi',
    './Subtitle.vapi',
    './CodecParameters.vapi',
    './GetBufferFlags.vapi',
    './CodecFlags2.vapi',
    './HardwareAccelerationFlags.vapi',
    './CodecParser.vapi',
    './CodecReceiveFrameFlags.vapi',
    './GetEncodeBufferFlags.vapi',
    './PictureStructure.vapi',
    './Memory.vapi',
    './RcOverride.vapi'
])
