#include "libavutil/samplefmt.h"
#include "libavutil/attributes.h"
#include "libavutil/avutil.h"
#include "libavutil/buffer.h"
#include "libavutil/channel_layout.h"
#include "libavutil/dict.h"
#include "libavutil/frame.h"
#include "libavutil/log.h"
#include "libavutil/pixfmt.h"
#include "libavutil/rational.h"
#include "codec.h"
#include "codec_id.h"
#include "defs.h"
#include "packet.h"
#include "version_major.h"


srcs += files([
    './SubtitleRect.vapi',
    './CodecParserContext.vapi',
    './SubtitleFlags.vapi',
    './CodecFlags1.vapi',
    './CodecConfig.vapi',
    './HardwareAccelerationCodecCapabilityFlags.vapi',
    './CodecContext.vapi',
    './HardwareAcceleration.vapi',
    './Subtitle.vapi',
    './CodecParameters.vapi',
    './GetBufferFlags.vapi',
    './CodecFlags2.vapi',
    './HardwareAccelerationFlags.vapi',
    './CodecParser.vapi',
    './CodecReceiveFrameFlags.vapi',
    './GetEncodeBufferFlags.vapi',
    './PictureStructure.vapi',
    './Memory.vapi',
    './RcOverride.vapi'
])
