
srcs += files([
    './ProfileAAC.vapi',
    './AudioServiceType.vapi',
    './ProfileEAC3.vapi',
    './ProfileVP9-1.vapi',
    './ProfileSBC.vapi',
    './Level.vapi',
    './Discard.vapi',
    './ProfileType.vapi',
    './ProfileVVC.vapi',
    './ProfileARIB.vapi',
    './ProfileDNXH.vapi',
    './defs.vapi',
    './ProfileH264.vapi',
    './ProfileEVC.vapi',
    './ProducerReferenceTime.vapi',
    './ProfileTrueHD.vapi',
    './ProfileAV1.vapi',
    './ProfileMJPEG.vapi',
    './CPBProperties.vapi',
    './ProfileMPEG2.vapi',
    './ProfileKLVA.vapi',
    './ProfileVP9.vapi',
    './FieldOrder.vapi',
    './RTCPSenderReport.vapi',
    './ProfileDTS.vapi',
    './PanScanArea.vapi',
    './ProfileHEVC.vapi',
    './ProfileProRes.vapi',
    './ProfileAPV.vapi',
    './ProfileVC1.vapi',
    './StrictStandardsCompliance.vapi',
    './ProfileMPEG4.vapi',
    './ProfileJPEG2000.vapi'
])
